# cfx-cli

./: Cargo.toml  fxmanifest.lua
debug/: minimap.ytd
src/: archive.rs  main.rs
src/commands/: create.rs  unpack.rs
