[package]
name = "cfx-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
inquire = "0.6.2"
string-builder = "0.2.0"
log = "0.4.20"